--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,6 +48,16 @@
     .scrollbar-hide {
       -ms-overflow-style: none;
       scrollbar-width: none;
+    }
+    .shadow-glow {
+      box-shadow: 0 0 20px rgba(148, 200, 64, 0.4);
+    }
+    @keyframes pulse-glow {
+      0%, 100% { opacity: 0.6; box-shadow: 0 0 10px rgba(148, 200, 64, 0.2); }
+      50% { opacity: 1; box-shadow: 0 0 25px rgba(148, 200, 64, 0.5); }
+    }
+    .animate-pulse-glow {
+      animation: pulse-glow 2s infinite;
     }
   </style>
 <script type="importmap">
