feat: Add interactive learn module and UI polish
Introduces a new interactive module for learning and refines the user interface with improved styling, hover effects, and new icons. This change enhances user engagement and provides a more visually appealing experience.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             sans: ['Inter', 'sans-serif'],
             mono: ['JetBrains Mono', 'monospace'],
             handwritten: ['Caveat', 'cursive'],
+          },
+          animation: {
+            'spin-slow': 'spin 12s linear infinite',
           }
         }
       }
