--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           },
           animation: {
             'spin-slow': 'spin 12s linear infinite',
+            'spin-slow-reverse': 'spin 15s linear infinite reverse',
           }
         }
       }
